--- a/sections/financing-page.liquid
+++ b/sections/financing-page.liquid
@@ -1,174 +1,214 @@
-<link rel="stylesheet" href="{{ 'section-main-page.css' | asset_url }}" media="print" onload="this.media='all'">
-<link rel="stylesheet" href="{{ 'component-rte.css' | asset_url }}" media="print" onload="this.media='all'">
+<link
+  rel="stylesheet"
+  href="{{ 'section-main-page.css' | asset_url }}"
+  media="print"
+  onload="this.media='all'">
+<link
+  rel="stylesheet"
+  href="{{ 'component-rte.css' | asset_url }}"
+  media="print"
+  onload="this.media='all'">
 
 <noscript>{{ 'section-main-page.css' | asset_url | stylesheet_tag }}</noscript>
 <noscript>{{ 'component-rte.css' | asset_url | stylesheet_tag }}</noscript>
 <div class="generic-headerBG">
-    <div class="generic-header">
-        <div class="gh-text">
-            <cms id='cms0'>
+  <div class="generic-header">
+    <div class="gh-text">
+      <cms id='cms0'>
 
 
-
-<h1>Sauna Now, Pay Over Time</h1>
-<p class="etica">Experience the benefits of full-spectrum infrared therapy now and pay later with with flexible payment options.*</p>
-</cms cms0>
-        </div>
+        <h1>Sauna Now, Pay Over Time</h1>
+        <p class="etica">Experience the benefits of full-spectrum infrared therapy now and pay later with with flexible payment options.*</p>
+      </cmscms0>
     </div>
+  </div>
 </div>
 
 <section>
-    <div class="centered-text">
-        <cms id='cms1'>
-<h2>You’ve Got Options</h2>
-<p>Choose Splitit for interest-free payments on the credit card you already use, or pick Shop Pay Installments for a simple loan you pay off over time.</p>
-</cms cms1>
-    </div>
+  <div class="centered-text">
+    <cms id='cms1'>
+      <h2>You’ve Got Options</h2>
+      <p>Choose Splitit for interest-free payments on the credit card you already use, or pick Shop Pay Installments for a simple loan you pay off over time.</p>
+    </cmscms1>
+  </div>
 </section>
 
 <section>
-    <div class="two-cols two-cols-narrow">
-        <div class="col col-bordered">
-            <img src="{{ 'splitit.svg' | asset_url }}" style="width: 75px;" alt="SplitIt" loading="lazy" />
-            <cms id='cms2'>
+  <div class="two-cols two-cols-narrow">
+    <div class="col col-bordered">
+      <img
+        src="{{ 'splitit.svg' | asset_url }}"
+        style="width: 75px;"
+        alt="SplitIt"
+        loading="lazy" />
+      <cms id='cms2'>
 
-<ul>
-<li>0% interest</li>
-<li>Monthly payments on your existing credit card</li>
-<li>Keep earning rewards from your credit card</li>
-<li>No credit check needed to qualify</li>
-<li>Choose from 2- to 12-month payment plans</li>
-</ul>
-</cms cms2>
-            <p class="fineprint">You can choose this option at checkout.</p>
-        </div>
-        <div class="col col-bordered">
-            <img src="{{ 'shop-pay.svg' | asset_url }}" style="width: 175px;" alt="Shop Pay Installments" loading="lazy" />
-            <cms id='cms3'>
-
-
-
-<ul>
-<li>4 interest-free payments every two weeks</li>
-<li>Interest-bearing options for up to 12 months*</li>
-<li>Traditional installation loan</li>
-<li>Check your rate without affecting your credit score</li>
-<li>Check your eligibility in seconds</li>
-</ul>
-</cms cms3>
-            <p class="fineprint">You can choose this option at checkout.</p>
-        </div>
+        <ul>
+          <li>0% APR interest</li>
+          <li>Monthly payments on your existing credit card</li>
+          <li>Keep earning rewards from your credit card</li>
+          <li>No credit check needed to qualify</li>
+          <li>Choose from 2- to 12-month payment plans</li>
+        </ul>
+      </cmscms2>
+      <p class="fineprint">You can choose this option at checkout.</p>
     </div>
+    <div class="col col-bordered">
+      <img
+        src="{{ 'shop-pay.svg' | asset_url }}"
+        style="width: 175px;"
+        alt="Shop Pay Installments"
+        loading="lazy" />
+      <cms id='cms3'>
+
+
+        <ul>
+          <li>4, 0% APR interest payments every two weeks</li>
+          <li>Interest-bearing options for up to 12 months*</li>
+          <li>Traditional installation loan</li>
+          <li>Check your rate without affecting your credit score</li>
+          <li>Check your eligibility in seconds</li>
+        </ul>
+      </cmscms3>
+      <p class="fineprint">You can choose this option at checkout.</p>
+    </div>
+  </div>
 
 </section>
 
 <div class="divider"></div>
 <section>
-    <cms id='cms4'>
+  <cms id='cms4'>
 
-<h2 class="h2Spacing">How It Works</h2>
-<div class="trial-cols">
-<div class="trial-col">
-<div class="trial-head">Apply in seconds</div>
-<p>See your options in checkout without impacting your credit score.</p>
-</div>
-<div class="trial-col">
-<div class="trial-head">Choose your plan</div>
-<p>Select the payment plan that works best for you.</p>
-</div>
-<div class="trial-col">
-<div class="trial-head">Complete your order</div>
-<p>During the payment step of checkout, select Shop Pay or Splitit.</p>
-</div>
-</div>
-</cms cms4>
+    <h2 class="h2Spacing">How It Works</h2>
+    <div class="trial-cols">
+      <div class="trial-col">
+        <div class="trial-head">Apply in seconds</div>
+        <p>See your options in checkout without impacting your credit score.</p>
+      </div>
+      <div class="trial-col">
+        <div class="trial-head">Choose your plan</div>
+        <p>Select the payment plan that works best for you.</p>
+      </div>
+      <div class="trial-col">
+        <div class="trial-head">Complete your order</div>
+        <p>During the payment step of checkout, select Shop Pay or Splitit.</p>
+      </div>
+    </div>
+  </cmscms4>
 </section>
 
 <div class="divider"></div>
 
 <div class="two-cols two-cols-wide tc-reverse">
-    <div class="col">
-        <img src="{{ 'financing-why-choose.jpg' | asset_url }}" alt="Family enjoying a Photon" loading="lazy" />
-    </div>
-    <div class="col">
-        <div class="tcw-text">
-            <cms id='cms5'>
+  <div class="col">
+    <img
+      src="{{ 'financing-why-choose.jpg' | asset_url }}"
+      alt="Family enjoying a Photon"
+      loading="lazy" />
+  </div>
+  <div class="col">
+    <div class="tcw-text">
+      <cms id='cms5'>
 
 
-<h2 class="alignLeft">Why choose financing?</h2>
-<p><strong>Comfortable payments</strong><br>Skip the stress. Pay for your sauna on a schedule that fits your lifestyle.</p>
-<p><strong>Budget-friendly terms</strong><br>With 0% options available, you can pay over time without paying extra.*</p><p><strong>No lost time</strong><br>Flexible financing helps you relax and rejuvenate now.
-</p></cms cms5>
-        </div>
+        <h2 class="alignLeft">Why choose financing?</h2>
+        <p>
+          <strong>Comfortable payments</strong><br>Skip the stress. Pay for your sauna on a schedule that fits your lifestyle.</p>
+        <p>
+          <strong>Budget-friendly terms</strong><br>With 0% APR options available, you can pay over time without paying extra.*</p>
+        <p>
+          <strong>No lost time</strong><br>Flexible financing helps you relax and rejuvenate now.
+        </p>
+      </cmscms5>
     </div>
+  </div>
 </div>
 
 <section>
-<h2 class="borderedH2 noBottomBorder">Questions?</h2>
-<div class="borderedBox">
+  <h2 class="borderedH2 noBottomBorder">Questions?</h2>
+  <div class="borderedBox">
     <div class="two-cols two-cols-narrow noMargin">
-        <div class="col col-centered">
-            <img src="{{ 'splitit.svg' | asset_url }}" style="width: 75px;" alt="SplitIt" loading="lazy" />
-                <cms id='cms6a'>
-<p>For questions, check <a href="https://www.splitit.com/faq/shoppers/" target="_blank">Splitit’s FAQ</a> or reach Splitit directly at <a href="mailto:support@splitit.com" target="_blank">support@splitit.com</a> or <a href="tel:18447754848" target="_blank">(844) 775-4848</a>.</p>
-</cms cms6a>
-        </div>
-        <div class="col col-centered">
-            <img src="{{ 'shop-pay.svg' | asset_url }}" style="width: 75px;" alt="Shop Pay Installments"  loading="lazy"/>
-            <cms id='cms6b'>
+      <div class="col col-centered">
+        <img
+          src="{{ 'splitit.svg' | asset_url }}"
+          style="width: 75px;"
+          alt="SplitIt"
+          loading="lazy" />
+        <cms id='cms6a'>
+          <p>For questions, check
+            <a href="https://www.splitit.com/faq/shoppers/" target="_blank">Splitit’s FAQ</a>
+            or reach Splitit directly at
+            <a href="mailto:support@splitit.com" target="_blank">support@splitit.com</a>
+            or
+            <a href="tel:18447754848" target="_blank">(844) 775-4848</a>.</p>
+        </cmscms6a>
+      </div>
+      <div class="col col-centered">
+        <img
+          src="{{ 'shop-pay.svg' | asset_url }}"
+          style="width: 75px;"
+          alt="Shop Pay Installments"
+          loading="lazy" />
+        <cms id='cms6b'>
 
 
-<p>For questions, check <a href="https://shoppay.affirm.com/help/s/" target="_blank">Shop Pay Installment's FAQ</a> or reach Shop Pay directly at <a href="https://shoppay.affirm.com/help/s/contact-us" target="_blank">shoppay.affirm.com</a>.</p>
-</cms cms6b>
-        </div>
+          <p>For questions, check
+            <a href="https://shoppay.affirm.com/help/s/" target="_blank">Shop Pay Installment's FAQ</a>
+            or reach Shop Pay directly at
+            <a href="https://shoppay.affirm.com/help/s/contact-us" target="_blank">shoppay.affirm.com</a>.</p>
+        </cmscms6b>
+      </div>
     </div>
-</div>
+  </div>
 </section>
 
 <section>
-<div class="legalText">
+  <div class="legalText">
     <cms id='cms7'>
 
 
-<p><strong>SplitIt</strong><br>At the time of purchase, once SaunaSpace confirms your shipment, you will only be charged for the first payment. The remaining balance will be held on your credit card until the final payment is made. After each monthly payment, the amount held from your available balance will be reduced to the new remaining balance (the held amount might appear as “pending”).</p>
-<p>To be eligible, you must own a VISA or MasterCard credit card and have the entire amount of your purchase available on your card.</p>
-<p>Splitit will not charge you interest or fees. Other potential interest, fees and/or charges may apply from your credit card issuer.</p>
-<p><strong>Shop Pay Installments</strong><br>*Rates from 0% APR or 10-30% APR. Payment options through Shop Pay Installments are subject to an eligibility check and are provided by these lending partners: <a href="https://www.affirm.com/lenders" target="_blank">affirm.com/lenders</a>. Options depend on your purchase amount, and a down payment may be required. State notices to consumers <a href="https://www.affirm.com/licenses" target="_blank">affirm.com/licenses</a>. If you finance your purchase with Affirm, your first payment is due approximately two weeks after your purchase is finalized. Please note that due to extended delivery times, your loan payment(s) may be due before you receive your purchase.</p>
-</cms cms7>
-</div>
+      <p>
+        <strong>SplitIt</strong><br>At the time of purchase, once SaunaSpace confirms your shipment, you will only be charged for the first payment. The remaining balance will be held on your credit card until the final payment is made. After each monthly payment, the amount held from your available balance will be reduced to the new remaining balance (the held amount might appear as “pending”).</p>
+      <p>To be eligible, you must own a VISA or MasterCard credit card and have the entire amount of your purchase available on your card.</p>
+      <p>Splitit will not charge you interest or fees. Other potential interest, fees and/or charges may apply from your credit card issuer.</p>
+      <p>
+        <strong>Shop Pay Installments</strong><br>*Rates from 0% APR or 10-36% APR. Payment options through Shop Pay Installments are subject to an eligibility check and are provided by these lending partners:
+        <a href="https://www.affirm.com/lenders" target="_blank">affirm.com/lenders</a>. Options depend on your purchase amount, and a down payment may be required. State notices to consumers
+        <a href="https://www.affirm.com/licenses" target="_blank">affirm.com/licenses</a>. If you finance your purchase with Affirm, your first payment is due approximately two weeks after your purchase is finalized. Please note that due to extended delivery times, your loan payment(s) may be due before you receive your purchase.</p>
+    </cmscms7>
+  </div>
 </section>
 
 
 {% schema %}
-{
-  "name": "t:sections.main-page.name",
-  "tag": "section",
-  "class": "section",
-  "settings": [
-    {
-      "type": "header",
-      "content": "t:sections.all.padding.section_padding_heading"
-    },
-    {
-      "type": "range",
-      "id": "padding_top",
-      "min": 0,
-      "max": 100,
-      "step": 4,
-      "unit": "px",
-      "label": "t:sections.all.padding.padding_top",
-      "default": 36
-    },
-    {
-      "type": "range",
-      "id": "padding_bottom",
-      "min": 0,
-      "max": 100,
-      "step": 4,
-      "unit": "px",
-      "label": "t:sections.all.padding.padding_bottom",
-      "default": 36
-    }
-  ]
-}
+  {
+    "name": "t:sections.main-page.name",
+    "tag": "section",
+    "class": "section",
+    "settings": [
+      {
+        "type": "header",
+        "content": "t:sections.all.padding.section_padding_heading"
+      }, {
+        "type": "range",
+        "id": "padding_top",
+        "min": 0,
+        "max": 100,
+        "step": 4,
+        "unit": "px",
+        "label": "t:sections.all.padding.padding_top",
+        "default": 36
+      }, {
+        "type": "range",
+        "id": "padding_bottom",
+        "min": 0,
+        "max": 100,
+        "step": 4,
+        "unit": "px",
+        "label": "t:sections.all.padding.padding_bottom",
+        "default": 36
+      }
+    ]
+  }
 {% endschema %}
