--- a/snippets/pay-over-time.liquid
+++ b/snippets/pay-over-time.liquid
@@ -7,7 +7,7 @@
       alt="SplitIt"
       loading="lazy" />
     <span data-ml="splitItSummary">
-      <p>Monthly payments using your credit card. 0% interest.</p>
+      <p>Monthly payments using your credit card. 0% APR interest.</p>
     </span>
     <a
       href="javascript:void(0)"
@@ -60,7 +60,7 @@
       alt="Shop Pay Installments" />
     <span data-ml="breadText">
       <ul>
-        <li>4 interest-free payments every two weeks</li>
+        <li>4, 0% APR Interest payments every 2 weeks</li>
         <li>Interest-bearing options for up to 12 months*</li>
         <li>Traditional installment loan</li>
         <li>Check your rate without affecting your credit score</li>
