--- a/sections/main-cart-footer.liquid
+++ b/sections/main-cart-footer.liquid
@@ -19,7 +19,7 @@
           <div class="ycf-box hideMe">
             <div class="yc-financing">
               <img src="{{ 'splitit.svg' | asset_url }}" width="85" alt="SplitIt" loading="lazy" />
-              <span data-ml="splitItSummary"><p>Monthly payments using your credit card. 0% interest.</p></span>
+              <span data-ml="splitItSummary"><p>Monthly payments using your credit card. 0% APR interest.</p></span>
               <a href="javascript:void(0)" class="yc-col-learnMore" onclick="potMore('splitit')">Learn More</a>
                 
               <img src="{{ 'shop-pay.svg' | asset_url }}" width="185" alt="Bread Financing" style="margin-top: 40px;" loading="lazy" />
@@ -40,7 +40,7 @@
           <div class="pot-col-100 hideMe" id="breadCol">
             <a href="javascript:void(0)" class="pot-close"><img src="{{ 'close.svg' | asset_url }}" alt="Close" style="width: 15" height="15" loading="lazy" /></a>
             <img src="{{ 'shop-pay.svg' | asset_url }}" width="185" alt="Bread Financing" loading="lazy" />
-            <span data-ml="breadText"><ul><li>4 interest-free payments every two weeks</li><li>Interest-bearing options for up to 12 months*</li><li>Traditional installment loan</li><li>Check your rate without affecting your credit score</li></ul><p>*Rates from 0% APR or 10-30% APR. Payment options through Shop Pay Installments are subject to an eligibility check and are provided by these lending partners: <a href="https://www.affirm.com/lenders" target="_blank">affirm.com/lenders</a>. Options depend on your purchase amount, and a down payment may be required. State notices to consumers <a href="https://www.affirm.com/licenses" target="_blank">affirm.com/licenses</a>.</p></span>
+            <span data-ml="breadText"><ul><li>4, 0% APR Interest payments every 2 weeks</li><li>Interest-bearing options for up to 12 months*</li><li>Traditional installment loan</li><li>Check your rate without affecting your credit score</li></ul><p>*Rates from 0% APR or 10-30% APR. Payment options through Shop Pay Installments are subject to an eligibility check and are provided by these lending partners: <a href="https://www.affirm.com/lenders" target="_blank">affirm.com/lenders</a>. Options depend on your purchase amount, and a down payment may be required. State notices to consumers <a href="https://www.affirm.com/licenses" target="_blank">affirm.com/licenses</a>.</p></span>
             <p class="fineprint">Check your eligibility in minutes at checkout.</p>
           </div>
         </div>
