--- a/snippets/smsbump_checkout_marketing_subscription.liquid
+++ b/snippets/smsbump_checkout_marketing_subscription.liquid
@@ -1,15 +1,35 @@
 
-                    <script type="text/javascript" src="https://dnuaqhs941n75.cloudfront.net/files/shopify/js/checkout_marketing_subscription_v2.js?ver=1679251477"></script>
+                    <script type="text/javascript" id="smsbump-checkout-widget" src="https://dnuaqhs941n75.cloudfront.net/files/shopify/js/checkout_marketing_subscription_v2.js?ver=1689018574"></script>
                     <script>
-                        smsbump_checkout_widget.init({
-                            has_box: 1,
-                            has_title: 1,
-                            checkbox_title: `I want order and shipment updates by text!`,
-                            checkbox_label: `Enjoy peace of mind, knowing you'll get updates for every step of your order's fulfillment.`,
-                            consent_message : `By checking this box I consent to receive recurring automated marketing by text message through an automatic telephone dialing system. Consent is not a condition to purchase. Message and data rates apply. Opt-out by texting STOP.`,
-                            privacy_policy_text: `Privacy`,
-                            privacy_policy_link: `/pages/privacy-policy`,
+                        const loadSmsbumpCheckoutWidget = function () {
+                            if (typeof smsbump_checkout_widget === 'undefined') {
+                                return false;
+                            }
                             
-                        });
+                            smsbump_checkout_widget.init({
+                                has_box: 1,
+                                has_title: 1,
+                                checkbox_title: `I want order and shipment updates by text!`,
+                                checkbox_label: `Enjoy peace of mind, knowing you'll get updates for every step of your order's fulfillment.`,
+                                consent_message : `By checking this box I consent to receive recurring automated marketing by text message through an automatic telephone dialing system. Consent is not a condition to purchase. Message and data rates apply. Opt-out by texting STOP.`,
+                                privacy_policy_text: `Privacy`,
+                                privacy_policy_link: `/pages/privacy-policy`,
+                                
+                            });
+                            
+                            return true;
+                        };
+                        
+                        try {
+                            if (!loadSmsbumpCheckoutWidget()) {
+                                const script = document.querySelector('#smsbump-checkout-widget');
+                                script.addEventListener('load', function() {
+                                    loadSmsbumpCheckoutWidget();
+                                });
+                            }
+                        } catch (e) {
+                            console.log(e);
+                            loadSmsbumpCheckoutWidget();
+                        }
                         </script>
                        
