--- a/snippets/smsbump_checkout_marketing_subscription.liquid
+++ b/snippets/smsbump_checkout_marketing_subscription.liquid
@@ -13,7 +13,7 @@
                                 checkbox_label: `Enjoy peace of mind, knowing you'll get updates for every step of your order's fulfillment.`,
                                 consent_message : `By checking this box I consent to receive recurring automated marketing by text message through an automatic telephone dialing system. Consent is not a condition to purchase. Message and data rates apply. Opt-out by texting STOP.`,
                                 privacy_policy_text: `Privacy`,
-                                privacy_policy_link: `/pages/privacy-policy`,
+                                privacy_policy_link: `/policies/privacy-policy`,
                                 
                             });
                             
