--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -50,7 +50,7 @@
     {% render 'meta-tags' %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
-    {{ content_for_header }}
+    {%- render 'header-scripts.zipifypages', renderctx: 'thm' -%}{{ content_for_header }}
     <script id="vopo-head">
       (function () {
         if (
@@ -563,5 +563,5 @@
   <!-- XO-InsertCode -->
 {% include "xo-insertcode-footer" %}
 <!-- End: XO-InsertCode Footer-->
-</body>
+{%- render 'page-footer.zipifypages', renderctx: 'thm', ocuapp: oneclickupsellapp -%}</body>
 </html>
