--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -64,7 +64,8 @@
 					<div class="fl-col">
 						<div class="fl-head">Support</div>
 						<a href="https://help.sauna.space">FAQ</a>
-						<a href="/pages/shipping-and-returns">Shipping & Returns</a>
+						<a href="/pages/shipping-and-returns">Shipping</a>
+            <a href="/policies/refund-policy">Returns & Refunds</a>
 						<a href="/pages/warranty">Warranty</a>
 						<a href="/pages/financing">Financing</a>
 						<a href="/pages/100-day-home-trial">100-Day Home Trial</a>
@@ -80,8 +81,8 @@
 					</div>
 				</div>
 				<div class="copyright">&copy; 2013-<script> document.write(new Date().getFullYear());</script> SaunaSpace<sup>&reg;</sup>
-					<a href="/pages/terms">Terms</a>
-					<a href="/pages/privacy-policy">Privacy</a>
+					<a href="/policies/terms-of-service">Terms</a>
+					<a href="/policies/privacy-policy">Privacy</a>
 					<a href="/pages/disclaimer">Disclaimer</a>
 					<a href="/pages/trademarks">Trademarks</a>
 				</div>
