--- a/assets/base.css
+++ b/assets/base.css
@@ -1249,7 +1249,9 @@ button.shopify-payment-button__button--unbranded {
 .shopify-payment-button__button--branded {
   z-index: auto;
 }
-
+.pid-col-img iframe {
+	max-width: 100%;
+ }
 .cart__dynamic-checkout-buttons iframe {
   box-shadow: var(--shadow-horizontal-offset) var(--shadow-vertical-offset) var(--shadow-blur-radius) rgba(var(--color-base-text), var(--shadow-opacity));
 }
@@ -2982,7 +2984,7 @@ body {
 	font-size: 1.6rem;
 }
 
-section:not(.shopify-section) {
+section:not(.shopify-section), .shopify-policy__body {
 	width: 90%;
 	max-width: 1350px;
 	margin: 0 auto;
@@ -3497,7 +3499,12 @@ a.shop-nav-head:hover { border-bottom: 1px solid #000; }
 
 	.greyBG .col img { margin-bottom: 0;}
 
-.generic-headerBG {
+	.shopify-policy__container {
+		max-width: none;
+		padding: 0 !important;
+	}
+
+.generic-headerBG, .shopify-policy__title {
 	background: #6E1500;
 	height: 300px;
 	margin-bottom: var(--sectionBottom);
@@ -3515,6 +3522,23 @@ a.shop-nav-head:hover { border-bottom: 1px solid #000; }
 		display: flex;
 		align-items: center;
 	}
+
+	.shopify-policy__title {
+		position: relative;
+		overflow: hidden;
+		display: flex;
+		align-items: center;
+		padding: 6%;
+	}
+
+	.shopify-policy__title:after {
+		content: url(logo_symbol_generic-head.svg);
+		height: 300px;
+		max-width: 1200px;
+		position: absolute;
+		right: 3%;
+		bottom: -40%;
+	}
 	
 	.gh-short { height: 100px !important;}
 	
@@ -3528,7 +3552,15 @@ a.shop-nav-head:hover { border-bottom: 1px solid #000; }
 		max-width: 700px;
 		margin-bottom: 0;
 	}
+
+	/* .shopify-policy__title h1 {
+		width: 90%;
+    max-width: 1200px;
+    text-align: left;
+    padding-left: 6%;
+	} */
 	
+  
 	.gh-text h1 + p { margin-top: 1em; font-size: 1.4rem; margin-bottom: 0; }
 	
 .photo-headerBG {
@@ -5385,7 +5417,7 @@ h1.product__title, .product-text h1, .product-name-mobile {
 	.btn-outline { background: none; border: 2px solid #FFF; }
 	.btn-bordered { background: none; color: #C67A26; border: 2px solid #C67A26;}
 
-.genericText {
+.genericText, .rte {
 	max-width: 650px;
 	margin-bottom: var(--sectionBottom);
 }
@@ -5417,8 +5449,18 @@ h1 {
 	font-size: 4rem;
 	margin-bottom: .5em;
 }
+
+.shopify-policy__body h2 {
+	text-align: left;
+	margin-top: 1em;
+}
+.shopify-policy__body h3 {
+	font-size: 2rem;
+}
+
 .customer h1 {
-	color: #000
+	color: #000;
+	padding: 3rem 0 2rem;
 }
 h2 {
 	font-size: 3rem;
